# newpy

./: .gitignore  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: clean.sh
src/newpy/: cli.py  creator.py  main.py
tests/: test_cli.py  test_main.py
